[package]
name = "rebalancer"
version = "0.1.0"
description = "DeFi Portfolio Rebalancer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rebalancer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
uint = "0.9.5"

